--- a/Styles/newGame.css
+++ b/Styles/newGame.css
@@ -39,6 +39,7 @@
     border-radius: 8px;
     padding: 1.6rem;
     width: 100%;
+    height: 5.6rem;
 
 }
 
@@ -56,7 +57,10 @@ color: #aaa;
     text-shadow: 1px 1px 2px #0008;
     margin-top: 1.6rem;
     transition: filter 200ms;
+    height: 5.6rem;
 }
+
+
 
 .newGameButton:hover{
     cursor: pointer;
